--- a/MSRP/src/main/resources/application.properties
+++ b/MSRP/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:mariadb://localhost:3306/arosaje
+spring.datasource.username=root
+spring.datasource.password=root
 
+spring.jpa.show-sql=true
