--- a/MSRP/src/main/resources/application.properties
+++ b/MSRP/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mariadb://localhost:3306/arosa
+spring.datasource.username=root
+spring.datasource.password=root
 
+spring.jpa.show-sql=true
+
+spring.data.rest.base-path=/api-mspr
