requete api utilisateurs fonctionne

--- a/MSRP/pom.xml
+++ b/MSRP/pom.xml
@@ -45,6 +45,11 @@
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
 			<version>3.3.1</version>
@@ -58,5 +63,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
