--- a/MSRP/src/main/resources/application.properties
+++ b/MSRP/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.show-sql=true
-spring.data.rest.base-path=/api
+spring.web.cors.allowed-origins=http://localhost:8081/
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE
+spring.web.cors.allowed-headers=Origin, Content-Type, Accept
+spring.web.cors.allow-credentials=true
